[package]
name = "lace_web"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "debug", "webgl", "fira-sans"] }
lace_gui = { path = "../lace_gui" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
open = "5"
